chandeliers-lus/tests/compile_fail/ui/causality/redef-var-def.rs
chandeliers_lus::decl! {
    node foo() returns (a : int);
    let
        a = 42;
        a = 7;
    tel;
}

fn main() {}
