chandeliers-lus/tests/compile_fail/ui/causality/redef-var-def.stderr
error: Attempt to redefine Variable `a`, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-var-def.rs:5:9
  |
5 |         a = 7;
  |         ^^^^^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-def.rs:4:9
  |
4 |         a = 42;
  |         ^^^^^^
